--- a/ProjectDivulga/app/src/main/res/values/strings.xml
+++ b/ProjectDivulga/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ProjectDivulga</string>
+    <string name="app_name">Guia De Bolso</string>
 
     <string name="navigation_drawer_open">Abrir Menu</string>
     <string name="navigation_drawer_close">Fechar Menu</string>
@@ -25,6 +25,7 @@
     <string name="fav_frag">FAVORITOS</string>
     <string name="title_activity_maps">Map</string>
     <string name="empty_text">Nenhum item encontrado!</string>
+    <string name="funcionamento">Horário de Funcionamento</string>
 
 
 </resources>
